# llm-search

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release.yml
chat-client/: Dockerfile  server.py
chat-client/static/: app.js  index.html  manifest.json  style.css  sw.js
docs/: architecture.md  architecture_zh.md  chatLanguageModels.json  requirements.md  requirements_zh.md
scripts/: release.sh
searxng/: limiter.toml  settings.yml
src/llm_search/: __init__.py  __main__.py  anthropic_adapter.py  cache.py  config.py  fetch_page.py  mcp_server.py  rate_limiter.py  responses_adapter.py  server.py  tool_loop.py  tool_registry.py
src/llm_search/search/: __init__.py  base.py  brave.py  searxng.py  serpapi.py
tests/: __init__.py  test_cache.py  test_search_providers.py  test_tool_loop.py
